# myrtt

./: .config  .gitignore  .gitmodules  SConstruct  rtconfig.h
applications/: CMakeLists.txt  Makefile.common  Makefile.depends
applications/SDK/: Makefile.common
applications/SDK/cplusplus/: Makefile.local  crt.h  cxx_crt.cpp
applications/cplusplus/: Makefile.local  crt.h  cxx_crt.cpp
applications/cxx/: Makefile  Makefile.local  cxx.cpp  cxx.h
applications/hello/: Makefile  Makefile.local  main.c
applications/linker_scripts/: link.lds
applications/mnist/: Makefile  Makefile.local  SConscript  digit.h  main.cpp  model.h
applications/mnist/tools/: mnist-c-digit.py  mnist-c-model.py  mnist-inference.py  mnist-train.py
applications/newlib/: Makefile.local  lib_crt0.c  lib_reent.c  lib_svcbase.c  lib_syscalls.c  lib_syscalls.h
applications/newlib/include/: syscall.h
applications/pthread/: Makefile  main.c
applications/signal/: Makefile  main.c
applications/tflite-mcu/: Makefile  Makefile.local  main.c
applications/tflite-mcu/source/: Makefile
applications/tflite-mcu/source/tensorflow/lite/micro/: micro_allocator.cc
applications/tflite-mcu/source/tensorflow/lite/micro/examples/hello_world/: main.cc
board/: Kconfig
board/linker_scripts/: link.lds
board/ports/: sdcard_port.c  sdram_port.h
components/: Kconfig
components/finsh/: cmd.c  shell.c
components/syscall/: SConscript  syscall.c  syscall.h
include/: exc_return.h  rtdef.h  rthw.h  rtthread.h
src/: Kconfig  components.c  idle.c  kservice.c  scheduler.c  signal.c  thread.c
(+69 files in other folders)
